--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background: rgb(213,238,174);
+  background: linear-gradient(0deg, rgba(213,238,174,1) 0%, rgba(148,219,233,1) 100%);
+  height: 100%;
+  margin: 0;
 }
 
 .App-logo {
