--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
-
 html *
 {
-  font-family: 'Noto Sans Japanese', sans-serif;
+  font-family: "Lucida Console", Helvetica;
 }
 
 .App {
   text-align: center;
+  height: 100%;
 }
 
 header {
-  color: #2F7AE5;
+  color: #2a2a2b;
   font-size: 30px;
 }
 
@@ -23,7 +23,7 @@ textarea {
 
 button {
   color: #fff;
-  background: #2F7AE5;
+  background: #24d6be;
   padding: 12px;
   border-radius: 5px;
   border: none;
@@ -37,7 +37,7 @@ button {
 }
 
 button:hover {
-  background-color: #1c4b8d;
+  background-color: #87f0cd;
 }
 
 input[type=text], input[type=tel] {
@@ -69,7 +69,7 @@ input[type=text] {
 }
 
 .status {
-  color: #2F7AE5;
+  color: #353535;
 }
 
 /* International Telephone InputのCSS */
